--- a/index.html
+++ b/index.html
@@ -1,19 +1,184 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <title>Portfolio</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  </head>
-  <body>
-      
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="shortcut icon" href="assets/images/browerfavicon.ico">
+</head>
+
+<body>
+    <!-- navbar here -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand">Geethika Koppisetty</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-item nav-link" href="#about-me">Hi!</a>
+                <a class="nav-item nav-link" href="#portfolio">Portfolio</a>
+                <a class="nav-item nav-link" href="#contact">Contact Me</a>
+            </div>
+        </div>
+    </nav>
+    <!-- end navbar -->
+    <!-- still not collapsing properly -->
+    <!-- hamburger menu showing up, but no dropdown responsiveness -->
+
+    <div class="container-fluid">
+
+        <!-- headshot and about me -->
+        <div class="row" id="about-me">
+            <div class="col-md-3">
+                <img alt="That's Me!" src="assets/images/profile2.jpg" id="profile-shot" />
+            </div>
+            <div class="col-md-9" id="about-blurb">
+                <h2>
+                    Hi!
+                </h2>
+                <h4>
+                    I'm Geethika and I design and build websites.
+                </h4>
+            </div>
+        </div>
+
+        <!-- portfolio -->
+        <div class="row" id="portfolio">
+            <div class="col-md-12">
+                <div class="row">
+                    <div class="col-md-8">
+                        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                            <ol class="carousel-indicators">
+                                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                            </ol>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img class="d-block w-100" src="https://via.placeholder.com/600x200"
+                                        alt="First slide">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h5>1</h5>
+                                        <p>...</p>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="https://via.placeholder.com/600x200"
+                                        alt="Second slide">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h5>2</h5>
+                                        <p>...</p>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="https://via.placeholder.com/600x200"
+                                        alt="Third slide">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h5>3</h5>
+                                        <p>...</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
+                                data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button"
+                                data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4" id="specific-portfolio">
+                        <div class="card" id="portcard">
+                            <h5 class="card-header">
+                                Looking for something in particular?
+                            </h5>
+                            <div class="card-body" id="projects-list">
+                                <p class="card-text">
+                                    <a href="">
+                                        Marvelous Hangman
+                                    </a>
+                                </p>
+                                <p class="card-text">
+                                    <a href="">
+                                        Crystal Collector
+                                    </a>
+                                </p>
+                                <p class="card-text">
+                                    <a href="">
+                                        A Very Potter Trivia
+                                    </a>
+                                </p>
+                                <p class="card-text">
+                                    <a href="https://gkoppisetty96.github.io/Find_That_Gif/">
+                                        Find That Gif
+                                    </a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- contact me -->
+        <div class="row" id="contact">
+            <div class="col-md-4">
+                <a href="https://www.linkedin.com/in/geethika-koppisetty-6a4069155/" target="_blank">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+            </div>
+            <div class="col-md-4">
+                <a href="https://github.com/Gkoppisetty96" target="_blank">
+                    <i class="fab fa-github"></i>
+                </a>
+            </div>
+            <div class="col-md-4">
+                <a href="mailto:gkoppisetty96@gmail.com" target="_blank">
+                    <i class="fas fa-envelope"></i>
+                </a>
+            </div>
+        </div>
 
 
 
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script>
-    // need any javascript??
+    </div>
+
+    <!-- footer -->
+    <footer>
+        <span id="footer-info">
+            Copyright &copy; 2019 Geethika Koppisetty
+        </span>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+    <script type="text/javascript">
+
+        // $('.carousel').carousel({
+        //     interval: 2000
+        // })
+
     </script>
-  </body>
+</body>
+
 </html>
