--- a/index.html
+++ b/index.html
@@ -60,31 +60,37 @@
                                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                                 <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
                             </ol>
-                            <div class="carousel-inner">
+                            <div class="carousel-inner" id="caro">
                                 <div class="carousel-item active">
-                                    <img class="d-block w-100" src="https://via.placeholder.com/600x200"
-                                        alt="First slide">
-                                    <div class="carousel-caption d-none d-md-block">
-                                        <h5>1</h5>
-                                        <p>...</p>
-                                    </div>
+                                    <a href="https://gkoppisetty96.github.io/Marvelous_Hangman/" target="_blank"><img
+                                            class="d-block w-100" src="assets/images/marvhang.png"
+                                            alt="Marvelous Hangman"></a>
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="https://via.placeholder.com/600x200"
-                                        alt="Second slide">
-                                    <div class="carousel-caption d-none d-md-block">
-                                        <h5>2</h5>
-                                        <p>...</p>
-                                    </div>
+                                    <a href="https://gkoppisetty96.github.io/Crystal_Collector/" target="_blank"><img
+                                            class="d-block w-100" src="assets/images/2_crystal.PNG"
+                                            alt="Crystal Collector"></a>
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="https://via.placeholder.com/600x200"
-                                        alt="Third slide">
-                                    <div class="carousel-caption d-none d-md-block">
-                                        <h5>3</h5>
-                                        <p>...</p>
-                                    </div>
+                                    <a href="https://gkoppisetty96.github.io/AVPTrivia" target="_blank"><img class="d-block w-100"
+                                            src="assets/images/3_avpt.png" alt="A Very Potter Trivia">
+                                    </a>
+                                </div>
+                                <div class="carousel-item">
+                                    <a href="https://gkoppisetty96.github.io/Find_That_Gif/" target="_blank"><img class="d-block w-100"
+                                            src="assets/images/4_gif.png" alt="Find That Gif"></a>
+                                </div>
+                                <div class="carousel-item">
+                                    <a href="https://gkoppisetty96.github.io/Train_Schedule/" target="_blank"><img class="d-block w-100"
+                                            src="assets/images/5_train.png" alt="Train Schedule"></a>
+                                </div>
+                                <div class="carousel-item">
+                                    <a href="https://gkoppisetty96.github.io/FeelingHungry/" target="_blank"><img class="d-block w-100"
+                                            src="assets/images/6_hungry.png" alt="Feeling Hungry?"></a>
                                 </div>
                             </div>
                             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
@@ -107,23 +113,33 @@
                             </h5>
                             <div class="card-body" id="projects-list">
                                 <p class="card-text">
-                                    <a href="">
+                                    <a data-target="#carouselExampleIndicators" data-slide-to="0">
                                         Marvelous Hangman
                                     </a>
                                 </p>
                                 <p class="card-text">
-                                    <a href="">
+                                    <a data-target="#carouselExampleIndicators" data-slide-to="1">
                                         Crystal Collector
                                     </a>
                                 </p>
                                 <p class="card-text">
-                                    <a href="">
+                                    <a data-target="#carouselExampleIndicators" data-slide-to="2">
                                         A Very Potter Trivia
                                     </a>
                                 </p>
                                 <p class="card-text">
-                                    <a href="https://gkoppisetty96.github.io/Find_That_Gif/">
+                                    <a data-target="#carouselExampleIndicators" data-slide-to="3">
                                         Find That Gif
+                                    </a>
+                                </p>
+                                <p class="card-text">
+                                    <a data-target="#carouselExampleIndicators" data-slide-to="4">
+                                        Train Schedule
+                                    </a>
+                                </p>
+                                <p class="card-text">
+                                    <a data-target="#carouselExampleIndicators" data-slide-to="5">
+                                        Feeling Hungry?
                                     </a>
                                 </p>
                             </div>
