--- a/index.html
+++ b/index.html
@@ -44,9 +44,20 @@
                 <h2>
                     Hi!
                 </h2>
+                <br>
                 <h4>
-                    I'm Geethika and I design and build websites.
+                    I'm Geethika and I'm a UI/UX designer and front-end developer.
                 </h4>
+                <br>
+                <h5>
+                    Look around to learn more about what I can do.
+                </h5>
+                <h5>
+                    The images below will take you to projects I've done.
+                </h5>
+                <h5>
+                    You can find me on LinkedIn or Github, or just email me if you'd like to talk. 
+                </h5>
             </div>
         </div>
 
