--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                 </div>
                                 <div class="carousel-item">
                                     <a href="https://gkoppisetty96.github.io/FeelingHungry/" target="_blank"><img class="d-block w-100"
-                                            src="assets/images/6_hungry.png" alt="Feeling Hungry?"></a>
+                                            src="assets/images/6_hungry.PNG" alt="Feeling Hungry?"></a>
                                 </div>
                             </div>
                             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
