--- a/index.html
+++ b/index.html
@@ -26,12 +26,26 @@
                 <a class="nav-item nav-link" href="#about-me">Hi!</a>
                 <a class="nav-item nav-link" href="#portfolio">Portfolio</a>
                 <a class="nav-item nav-link" href="#contact">Contact Me</a>
+                <a class="nav-item nav-link" href="assets/images/resume_GeethikaKoppisetty.pdf" target="_blank">Resume</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Github Code
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="https://github.com/Gkoppisetty96/gkoppisetty96.github.io">Portfolio</a>
+                      <div class="dropdown-divider"></div>
+                      <a class="dropdown-item" href="https://github.com/Gkoppisetty96/Marvelous_Hangman" target="_blank">Marvelous Hangman</a>
+                      <a class="dropdown-item" href="https://github.com/Gkoppisetty96/ Crystal_Collector" target="_blank">Crystal Collector</a>
+                      <a class="dropdown-item" href="https://github.com/Gkoppisetty96/AVPTrivia" target="_blank">A Very Potter Trivia</a>
+                      <a class="dropdown-item" href="https://github.com/Gkoppisetty96/Find_That_Gif" target="_blank">Find That Gif</a>
+                      <a class="dropdown-item" href="https://github.com/Gkoppisetty96/Train_Schedule" target="_blank">Train Schedule</a>
+                      <a class="dropdown-item" href="https://github.com/Gkoppisetty96/FeelingHungry" target="_blank">Feeling Hungry?</a>
+                    </div>
+                  </li>
             </div>
         </div>
     </nav>
     <!-- end navbar -->
-    <!-- still not collapsing properly -->
-    <!-- hamburger menu showing up, but no dropdown responsiveness -->
 
     <div class="container-fluid">
 
@@ -46,7 +60,7 @@
                 </h2>
                 <br>
                 <h4>
-                    I'm Geethika and I'm a UI/UX designer and front-end developer.
+                    I'm Geethika and I'm a UI/UX designer and front-end developer based out of Atlanta, Georgia.
                 </h4>
                 <br>
                 <h5>
