--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
                 <a class="nav-item nav-link" href="#about-me">Hi!</a>
                 <a class="nav-item nav-link" href="#portfolio">Portfolio</a>
                 <a class="nav-item nav-link" href="#contact">Contact Me</a>
-                <a class="nav-item nav-link" href="assets/images/resume_GeethikaKoppisetty.pdf" target="_blank">Resume</a>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Github Code
@@ -40,6 +39,7 @@
                       <a class="dropdown-item" href="https://github.com/Gkoppisetty96/Find_That_Gif" target="_blank">Find That Gif</a>
                       <a class="dropdown-item" href="https://github.com/Gkoppisetty96/Train_Schedule" target="_blank">Train Schedule</a>
                       <a class="dropdown-item" href="https://github.com/Gkoppisetty96/FeelingHungry" target="_blank">Feeling Hungry?</a>
+                      <a class="dropdown-item" href="https://github.com/Gkoppisetty96/LIRI" target="_blank">LIRI</a>
                     </div>
                   </li>
             </div>
@@ -88,34 +88,39 @@
                                 <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
                                 <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
                                 <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
                             </ol>
                             <div class="carousel-inner" id="caro">
                                 <div class="carousel-item active">
                                     <a href="https://gkoppisetty96.github.io/Marvelous_Hangman/" target="_blank"><img
-                                            class="d-block w-100" src="assets/images/marvhang.png"
+                                            class="d-block w-100" src="assets/images/0_marvhang.png"
                                             alt="Marvelous Hangman"></a>
                                 </div>
                                 <div class="carousel-item">
                                     <a href="https://gkoppisetty96.github.io/Crystal_Collector/" target="_blank"><img
-                                            class="d-block w-100" src="assets/images/2_crystal.PNG"
+                                            class="d-block w-100" src="assets/images/1_crystal.PNG"
                                             alt="Crystal Collector"></a>
                                 </div>
                                 <div class="carousel-item">
                                     <a href="https://gkoppisetty96.github.io/AVPTrivia" target="_blank"><img class="d-block w-100"
-                                            src="assets/images/3_avpt.png" alt="A Very Potter Trivia">
+                                            src="assets/images/2_avpt.png" alt="A Very Potter Trivia">
                                     </a>
                                 </div>
                                 <div class="carousel-item">
                                     <a href="https://gkoppisetty96.github.io/Find_That_Gif/" target="_blank"><img class="d-block w-100"
-                                            src="assets/images/4_gif.png" alt="Find That Gif"></a>
+                                            src="assets/images/3_gif.png" alt="Find That Gif"></a>
                                 </div>
                                 <div class="carousel-item">
                                     <a href="https://gkoppisetty96.github.io/Train_Schedule/" target="_blank"><img class="d-block w-100"
-                                            src="assets/images/5_train.png" alt="Train Schedule"></a>
+                                            src="assets/images/4_train.png" alt="Train Schedule"></a>
                                 </div>
                                 <div class="carousel-item">
                                     <a href="https://gkoppisetty96.github.io/FeelingHungry/" target="_blank"><img class="d-block w-100"
-                                            src="assets/images/6_hungry.PNG" alt="Feeling Hungry?"></a>
+                                            src="assets/images/5_hungry.PNG" alt="Feeling Hungry?"></a>
+                                </div>
+                                <div class="carousel-item">
+                                    <a href="https://github.com/Gkoppisetty96/LIRI" target="_blank"><img class="d-block w-100"
+                                            src="assets/images/6_liri.PNG" alt="LIRI"></a>
                                 </div>
                             </div>
                             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
@@ -165,6 +170,11 @@
                                 <p class="card-text">
                                     <a data-target="#carouselExampleIndicators" data-slide-to="5">
                                         Feeling Hungry?
+                                    </a>
+                                </p>
+                                <p class="card-text">
+                                    <a data-target="#carouselExampleIndicators" data-slide-to="6">
+                                        LIRI
                                     </a>
                                 </p>
                             </div>
