--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                       <a class="dropdown-item" href="https://github.com/Gkoppisetty96/Train_Schedule" target="_blank">Train Schedule</a>
                       <a class="dropdown-item" href="https://github.com/Gkoppisetty96/FeelingHungry" target="_blank">Feeling Hungry?</a>
                       <a class="dropdown-item" href="https://github.com/Gkoppisetty96/LIRI" target="_blank">LIRI</a>
+                      <a class="dropdown-item" href="https://github.com/Gkoppisetty96/bamazon" target="_blank">Bamazon</a>
                     </div>
                   </li>
             </div>
@@ -89,6 +90,7 @@
                                 <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
                                 <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
                                 <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
                             </ol>
                             <div class="carousel-inner" id="caro">
                                 <div class="carousel-item active">
@@ -121,6 +123,10 @@
                                 <div class="carousel-item">
                                     <a href="https://github.com/Gkoppisetty96/LIRI" target="_blank"><img class="d-block w-100"
                                             src="assets/images/6_liri.PNG" alt="LIRI"></a>
+                                </div>
+                                <div class="carousel-item">
+                                    <a href="https://github.com/Gkoppisetty96/bamazon" target="_blank"><img class="d-block w-100"
+                                            src="assets/images/7_bamazon.PNG" alt="bamazon"></a>
                                 </div>
                             </div>
                             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
@@ -175,6 +181,11 @@
                                 <p class="card-text">
                                     <a data-target="#carouselExampleIndicators" data-slide-to="6">
                                         LIRI
+                                    </a>
+                                </p>
+                                <p class="card-text">
+                                    <a data-target="#carouselExampleIndicators" data-slide-to="7">
+                                        Bamazon
                                     </a>
                                 </p>
                             </div>
