--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                       <a class="dropdown-item" href="https://github.com/Gkoppisetty96/FeelingHungry" target="_blank">Feeling Hungry?</a>
                       <a class="dropdown-item" href="https://github.com/Gkoppisetty96/LIRI" target="_blank">LIRI</a>
                       <a class="dropdown-item" href="https://github.com/Gkoppisetty96/bamazon" target="_blank">Bamazon</a>
+                      <a class="dropdown-item" href="https://github.com/Gkoppisetty96/Maintenance_Manager" target="_blank">Maintenance Manager</a>
                     </div>
                   </li>
             </div>
@@ -60,19 +61,22 @@
                     Hi!
                 </h2>
                 <br>
-                <h4>
+                <h3>
                     I'm Geethika and I'm a UI/UX designer and front-end developer based out of Atlanta, Georgia.
-                </h4>
+                </h3>
                 <br>
-                <h5>
+                <h6>
                     Look around to learn more about what I can do.
-                </h5>
-                <h5>
-                    The images below will take you to projects I've done.
-                </h5>
-                <h5>
+                </h6>
+                <h6>
+                    The carousel below will take you to projects I've done, and the code for everything can be found in the 'Github Code' dropdown above.
+                </h6>
+                <h6>
                     You can find me on LinkedIn or Github, or just email me if you'd like to talk. 
-                </h5>
+                </h6>
+                <h6>
+
+                </h6>
             </div>
         </div>
 
@@ -91,6 +95,7 @@
                                 <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
                                 <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
                                 <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
                             </ol>
                             <div class="carousel-inner" id="caro">
                                 <div class="carousel-item active">
@@ -127,6 +132,10 @@
                                 <div class="carousel-item">
                                     <a href="https://github.com/Gkoppisetty96/bamazon" target="_blank"><img class="d-block w-100"
                                             src="assets/images/7_bamazon.PNG" alt="bamazon"></a>
+                                </div>
+                                <div class="carousel-item">
+                                    <a href="https://maintenance-manager-gt.herokuapp.com/" target="_blank"><img class="d-block w-100"
+                                            src="assets/images/8_maintenancemanager.PNG" alt="Mainenance Manager"></a>
                                 </div>
                             </div>
                             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
@@ -188,6 +197,11 @@
                                         Bamazon
                                     </a>
                                 </p>
+                                <p class="card-text">
+                                    <a data-target="#carouselExampleIndicators" data-slide-to="8">
+                                        Maintenance Manager
+                                    </a>
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -208,7 +222,7 @@
                 </a>
             </div>
             <div class="col-md-4">
-                <a href="mailto:gkoppisetty96@gmail.com" target="_blank">
+                <a href="mailto:gkoppisetty96@gmail.com?subject=From Your Portfolio" target="_blank">
                     <i class="fas fa-envelope"></i>
                 </a>
             </div>
